--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,15 +31,6 @@
         android:background="#f4f3f3"
         android:fillViewport="true">
 
-        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/driver_cv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            card_view:cardCornerRadius="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -75,29 +66,39 @@
                     android:textColor="#000"
                     android:textCursorDrawable="@null" />
 
-                <Button
-                    android:id="@+id/btnLogin"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="30dp"
-                    android:maxLines="1"
-                    android:text="LOGIN" />
+                    android:orientation="horizontal"
+                    android:weightSum="1"
+                    android:layout_marginTop="30dp">
 
-                <Button
-                    android:id="@+id/btnRegister"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="15dp"
-                    android:maxLines="1"
-                    android:text="REGISTER" />
+                    <Button
+                        android:layout_weight="0.5"
+                        android:id="@+id/btnLogin"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@color/colorAccent"
+                        android:maxLines="1"
+                        android:text="LOGIN" />
+
+                    <Button
+                        android:layout_weight="0.5"
+                        android:id="@+id/btnRegister"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="15dp"
+                        android:maxLines="1"
+                        android:background="@color/colorAccent"
+                        android:text="REGISTER" />
+                </LinearLayout>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
     </ScrollView>
 </LinearLayout>
 
