--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,7 @@
                     android:layout_marginRight="10dp"
                     android:drawableLeft="@drawable/owner_profile"
                     android:hint=" USERNAME"
+                    android:text="ershrivastavashekhar@gmail.com"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:textColor="#000"
@@ -61,6 +62,7 @@
                     android:layout_marginRight="10dp"
                     android:drawableLeft="@drawable/password"
                     android:hint=" PASSWORD"
+                    android:text="shekhar@123"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:textColor="#000"
