--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -67,7 +67,7 @@
                 android:layout_height="72dp"
                 android:layout_gravity="center"
                 android:layout_weight="0.1"
-                android:src="@drawable/alto" />
+                android:src="@drawable/placeholder_car" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
