--- a/app/src/main/res/layout/activity_add_vehicle.xml
+++ b/app/src/main/res/layout/activity_add_vehicle.xml
@@ -120,7 +120,7 @@
                         android:layout_height="72dp"
                         android:layout_gravity="center"
                         android:layout_weight="0.1"
-                        android:src="@drawable/alto" />
+                        android:src="@drawable/placeholder_car" />
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -166,7 +166,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:drawableLeft="@drawable/seat"
+                        android:drawableLeft="@drawable/route"
                         android:text=" Route -"
                         android:textColor="#000"
                         android:textSize="18sp" />
