--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -38,11 +38,15 @@
                     android:maxLines="1"
                     android:textColor="#000"
                     android:textSize="18sp" />
+
                 <TextView
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:id="@+id/tvSeater"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center"
                     android:hint=" 5 seater"
                     android:maxLength="20"
                     android:maxLines="1"
@@ -53,12 +57,11 @@
                     android:id="@+id/driverAvlb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:drawableLeft="@drawable/driver"
                     android:text=" With driver"
                     android:maxLines="1"
                     android:textColor="#000"
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <ImageView
