--- a/app/src/main/res/layout/activity_vehicle_details.xml
+++ b/app/src/main/res/layout/activity_vehicle_details.xml
@@ -281,7 +281,7 @@
                 android:layout_marginTop="30dp"
                 android:maxLength="6"
                 android:maxLines="1"
-                android:text="PAY" />
+                android:text="BOOK" />
         </LinearLayout>
 
     </ScrollView>
