--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -65,14 +65,27 @@
                     android:textSize="15sp" />
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/ivVehicalPhoto"
-                android:layout_width="120dp"
-                android:layout_height="72dp"
-                android:layout_gravity="center"
-                android:layout_weight="0.1"
-                android:src="@drawable/placeholder_car" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="0.1">
 
+                <ImageView
+                    android:id="@+id/ivVehicalPhoto"
+                    android:layout_width="120dp"
+                    android:layout_height="72dp"
+                    android:layout_gravity="center"
+
+                    android:src="@drawable/placeholder_car" />
+
+                <TextView
+                    android:id="@+id/avlblStatus"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Available" />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
